Fix mesh warper initial panel locations (#719 #735)

--- a/resources/imgui_base_config.ini
+++ b/resources/imgui_base_config.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,46
-Size=1920,1011
+Pos=0,83
+Size=1920,897
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,7 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Splash screen]
-Pos=640,341
+Pos=640,317
 Size=640,512
 Collapsed=0
 
@@ -22,7 +22,7 @@ Collapsed=0
 Pos=0,48
 Size=1920,811
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000028,0
 
 [Window][Hierarchy]
 Pos=0,48
@@ -87,7 +87,7 @@ Collapsed=0
 Pos=364,19
 Size=1157,1117
 Collapsed=0
-DockId=0x0000000E,1
+DockId=0x00000028,1
 
 [Window][Edit Props]
 Pos=0,620
@@ -126,7 +126,7 @@ DockId=0x0000001F,0
 Pos=364,19
 Size=1157,1117
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000028,0
 
 [Window][editor]
 Pos=60,60
@@ -215,12 +215,12 @@ Collapsed=0
 
 [Window][viewer0]
 Pos=339,77
-Size=1581,720
+Size=1581,701
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000028,0
 
 [Window][Log]
-Pos=339,799
+Pos=339,780
 Size=1581,229
 Collapsed=0
 DockId=0x0000000A,0
@@ -274,7 +274,7 @@ Collapsed=0
 Pos=368,0
 Size=1552,1200
 Collapsed=0
-DockId=0x0000000E
+DockId=0x00000028
 
 [Window][wizardstep2sidebar]
 Size=366,1200
@@ -312,7 +312,7 @@ DockId=0x00000015,0
 Pos=269,48
 Size=1651,1009
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000028,0
 
 [Window][history]
 Pos=0,555
@@ -367,13 +367,13 @@ DockId=0x00000022,0
 
 [Window][Navigator]
 Pos=0,77
-Size=337,519
+Size=337,508
 Collapsed=0
 DockId=0x0000001F,0
 
 [Window][Properties]
-Pos=0,598
-Size=337,430
+Pos=0,587
+Size=337,422
 Collapsed=0
 DockId=0x00000020,0
 
@@ -437,45 +437,67 @@ DockId=0x00000025,0
 Pos=0,46
 Size=850,1011
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000028,0
+
+[Window][Result]
+Pos=1261,83
+Size=659,897
+Collapsed=0
+DockId=0x00000029,0
+
+[Window][Destination Mesh]
+Pos=582,83
+Size=677,897
+Collapsed=0
+DockId=0x00000028,0
+
+[Window][Source Mesh]
+Pos=0,83
+Size=580,897
+Collapsed=0
+DockId=0x00000026,0
 
 [Docking][Data]
-DockNode                        ID=0x00000025 Pos=29,454 Size=621,584 Selected=0xBDBFA952
-DockSpace                       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,46 Size=1920,1011 Split=X Selected=0x945C996A
-  DockNode                      ID=0x0000001D Parent=0x8B93E3BD SizeRef=267,1009 Split=Y Selected=0x69B4C9F1
-    DockNode                    ID=0x00000016 Parent=0x0000001D SizeRef=229,505 Selected=0x69B4C9F1
-    DockNode                    ID=0x00000018 Parent=0x0000001D SizeRef=229,502 Selected=0x27BA704B
-  DockNode                      ID=0x00000023 Parent=0x8B93E3BD SizeRef=1651,1009 Split=X
-    DockNode                    ID=0x0000001E Parent=0x00000023 SizeRef=1521,1009 Split=X
-      DockNode                  ID=0x00000021 Parent=0x0000001E SizeRef=1525,979 Split=X
-        DockNode                ID=0x00000015 Parent=0x00000021 SizeRef=322,1118 Selected=0xFA7A28AE
-        DockNode                ID=0x00000017 Parent=0x00000021 SizeRef=1596,1118 Split=X
-          DockNode              ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
-          DockNode              ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
-            DockNode            ID=0x00000001 Parent=0x00000014 SizeRef=337,1117 Split=Y Selected=0x788BAA0D
-              DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
-                DockNode        ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
-                  DockNode      ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
-                  DockNode      ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Selected=0x4EEF2531
-                DockNode        ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
-              DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Split=Y Selected=0x1E8A59A1
-                DockNode        ID=0x0000001F Parent=0x0000000B SizeRef=393,534 Selected=0x241F21A5
-                DockNode        ID=0x00000020 Parent=0x0000000B SizeRef=393,443 Selected=0x199AB496
-            DockNode            ID=0x00000002 Parent=0x00000014 SizeRef=1581,1117 Split=Y
-              DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
-                DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
-                  DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=600,916 Split=X Selected=0x7644F5CE
-                    DockNode    ID=0x0000000E Parent=0x00000004 SizeRef=850,1011 CentralNode=1 Selected=0x81C77DBA
-                    DockNode    ID=0x00000010 Parent=0x00000004 SizeRef=1068,1011 Selected=0x075BE350
-                  DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=620,916 Split=Y Selected=0x98DE1660
-                    DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
-                    DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
-                      DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
-                      DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
-                DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
-              DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0x64F50EE5
-      DockNode                  ID=0x00000022 Parent=0x0000001E SizeRef=393,979 Selected=0xE9337EF5
-    DockNode                    ID=0x00000024 Parent=0x00000023 SizeRef=397,1009 Split=Y Selected=0xCA5A0F8B
-      DockNode                  ID=0x00000011 Parent=0x00000024 SizeRef=397,505 Selected=0x044B1956
-      DockNode                  ID=0x00000012 Parent=0x00000024 SizeRef=397,502 Selected=0x1A64C361
+DockNode                          ID=0x00000025 Pos=29,454 Size=621,584 Selected=0xBDBFA952
+DockSpace                         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,83 Size=1920,897 Split=X Selected=0x945C996A
+  DockNode                        ID=0x00000026 Parent=0x8B93E3BD SizeRef=580,897 Selected=0x66BDF4F8
+  DockNode                        ID=0x00000027 Parent=0x8B93E3BD SizeRef=1338,897 Split=X
+    DockNode                      ID=0x0000001D Parent=0x00000027 SizeRef=267,1009 Split=Y Selected=0x69B4C9F1
+      DockNode                    ID=0x00000016 Parent=0x0000001D SizeRef=229,505 Selected=0x69B4C9F1
+      DockNode                    ID=0x00000018 Parent=0x0000001D SizeRef=229,502 Selected=0x27BA704B
+    DockNode                      ID=0x00000023 Parent=0x00000027 SizeRef=1651,1009 Split=X
+      DockNode                    ID=0x0000001E Parent=0x00000023 SizeRef=1521,1009 Split=X
+        DockNode                  ID=0x00000021 Parent=0x0000001E SizeRef=1525,979 Split=X
+          DockNode                ID=0x00000015 Parent=0x00000021 SizeRef=322,1118 Selected=0xFA7A28AE
+          DockNode                ID=0x00000017 Parent=0x00000021 SizeRef=1596,1118 Split=X
+            DockNode              ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
+            DockNode              ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
+              DockNode            ID=0x00000001 Parent=0x00000014 SizeRef=337,1117 Split=Y Selected=0x788BAA0D
+                DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
+                  DockNode        ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
+                    DockNode      ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
+                    DockNode      ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Selected=0x4EEF2531
+                  DockNode        ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
+                DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Split=Y Selected=0x1E8A59A1
+                  DockNode        ID=0x0000001F Parent=0x0000000B SizeRef=393,534 Selected=0x2EDB22E0
+                  DockNode        ID=0x00000020 Parent=0x0000000B SizeRef=393,443 Selected=0x199AB496
+              DockNode            ID=0x00000002 Parent=0x00000014 SizeRef=1581,1117 Split=Y
+                DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
+                  DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
+                    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=600,916 Split=X Selected=0x7644F5CE
+                      DockNode    ID=0x0000000E Parent=0x00000004 SizeRef=850,1011 Split=X Selected=0xE9146C8E
+                        DockNode  ID=0x00000028 Parent=0x0000000E SizeRef=677,897 CentralNode=1 Selected=0xE9146C8E
+                        DockNode  ID=0x00000029 Parent=0x0000000E SizeRef=659,897 Selected=0x0FF6C27D
+                      DockNode    ID=0x00000010 Parent=0x00000004 SizeRef=1068,1011 Selected=0x075BE350
+                    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=620,916 Split=Y Selected=0x98DE1660
+                      DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
+                      DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
+                        DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
+                        DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
+                  DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
+                DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0x64F50EE5
+        DockNode                  ID=0x00000022 Parent=0x0000001E SizeRef=393,979 Selected=0xE9337EF5
+      DockNode                    ID=0x00000024 Parent=0x00000023 SizeRef=397,1009 Split=Y Selected=0xCA5A0F8B
+        DockNode                  ID=0x00000011 Parent=0x00000024 SizeRef=397,505 Selected=0x044B1956
+        DockNode                  ID=0x00000012 Parent=0x00000024 SizeRef=397,502 Selected=0x1A64C361
 
