Move RenderBufferType into its own header file

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -80,6 +80,7 @@ add_library(oscar STATIC
     Graphics/RenderBuffer.hpp
     Graphics/RenderBufferLoadAction.hpp
     Graphics/RenderBufferStoreAction.hpp
+    Graphics/RenderBufferType.hpp
     Graphics/RenderTarget.cpp
     Graphics/RenderTarget.hpp
     Graphics/RenderTargetAttachment.cpp
