--- a/resources/imgui_base_config.ini
+++ b/resources/imgui_base_config.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,83
-Size=1920,897
+Size=1920,945
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,7 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Splash screen]
-Pos=640,317
+Pos=640,341
 Size=640,512
 Collapsed=0
 
@@ -34,7 +34,7 @@ DockId=0x0000001B,0
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x0000001F,0
+DockId=0x00000020,0
 
 [Window][Outputs]
 Pos=852,46
@@ -46,37 +46,37 @@ DockId=0x00000010,0
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x0000001F,2
+DockId=0x00000020,2
 
 [Window][Moment Arms]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x0000001F,3
+DockId=0x00000020,3
 
 [Window][Selection]
 Pos=0,507
 Size=292,419
 Collapsed=0
-DockId=0x0000001F,0
+DockId=0x00000020,0
 
 [Window][Coordinates]
 Pos=0,77
-Size=337,519
+Size=337,509
 Collapsed=0
-DockId=0x0000001F,1
+DockId=0x00000020,1
 
 [Window][Simulate]
 Pos=1523,19
 Size=397,558
 Collapsed=0
-DockId=0x0000001F,5
+DockId=0x00000020,5
 
 [Window][UI]
 Pos=0,19
 Size=397,1117
 Collapsed=0
-DockId=0x0000001F,5
+DockId=0x00000020,5
 
 [Window][Error loading]
 Pos=60,60
@@ -93,13 +93,13 @@ DockId=0x00000028,1
 Pos=0,620
 Size=353,517
 Collapsed=0
-DockId=0x0000001F,1
+DockId=0x00000020,1
 
 [Window][Snapshots]
 Pos=1523,0
 Size=397,568
 Collapsed=0
-DockId=0x0000001F,1
+DockId=0x00000020,1
 
 [Window][Actions]
 Pos=355,832
@@ -120,7 +120,7 @@ Collapsed=0
 [Window][##render]
 Size=1920,1136
 Collapsed=0
-DockId=0x0000001F,0
+DockId=0x00000020,0
 
 [Window][render1]
 Pos=364,19
@@ -215,13 +215,13 @@ Collapsed=0
 
 [Window][viewer0]
 Pos=339,77
-Size=1581,701
+Size=1182,980
 Collapsed=0
 DockId=0x00000028,0
 
 [Window][Log]
-Pos=339,780
-Size=1581,229
+Pos=0,799
+Size=1920,229
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -231,16 +231,16 @@ Size=512,787
 Collapsed=0
 
 [Window][viewer1]
-Pos=588,48
-Size=620,787
+Pos=1152,77
+Size=768,362
 Collapsed=0
-DockId=0x00000006
+DockId=0x00000006,0
 
 [Window][viewer2]
-Pos=931,480
-Size=615,489
+Pos=1152,441
+Size=768,385
 Collapsed=0
-DockId=0x0000000D
+DockId=0x0000000D,0
 
 [Window][viewer3]
 Pos=1538,464
@@ -255,14 +255,14 @@ Collapsed=0
 DockId=0x00000014
 
 [Window][Simulation Details]
-Pos=1523,555
-Size=397,502
+Pos=1523,569
+Size=397,488
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][Loading Message]
-Pos=704,248
-Size=512,58
+Pos=704,249
+Size=512,56
 Collapsed=0
 
 [Window][select experiment]
@@ -309,20 +309,20 @@ Collapsed=0
 DockId=0x00000015,0
 
 [Window][wizard_3dViewer]
-Pos=269,48
-Size=1651,1009
+Pos=269,46
+Size=983,780
 Collapsed=0
 DockId=0x00000028,0
 
 [Window][history]
-Pos=0,555
-Size=267,502
+Pos=1254,46
+Size=267,1011
 Collapsed=0
 DockId=0x00000018,0
 
 [Window][Save Changes?]
-Pos=704,464
-Size=512,128
+Pos=704,460
+Size=512,137
 Collapsed=0
 
 [Window][Property Editor]
@@ -335,13 +335,13 @@ DockId=0x0000001A,0
 Pos=1210,48
 Size=311,979
 Collapsed=0
-DockId=0x00000022,2
+DockId=0x0000002A,2
 
 [Window][MusclePlot_2]
 Pos=1210,48
 Size=311,979
 Collapsed=0
-DockId=0x00000022,1
+DockId=0x0000002A,1
 
 [Window][MusclePlot_3]
 Pos=60,60
@@ -354,46 +354,46 @@ Size=453,431
 Collapsed=0
 
 [Window][Selection Details]
-Pos=0,48
-Size=299,540
+Pos=0,561
+Size=337,496
 Collapsed=0
-DockId=0x0000001C,0
+DockId=0x0000002C,0
 
 [Window][Output Watches]
-Pos=1210,48
-Size=311,979
+Pos=1527,77
+Size=393,476
 Collapsed=0
-DockId=0x00000022,0
+DockId=0x0000002A,0
 
 [Window][Navigator]
 Pos=0,77
-Size=337,508
-Collapsed=0
-DockId=0x0000001F,0
-
-[Window][Properties]
-Pos=0,587
-Size=337,422
+Size=337,482
 Collapsed=0
 DockId=0x00000020,0
 
-[Window][Performance]
-Pos=1523,48
-Size=397,979
+[Window][Properties]
+Pos=0,604
+Size=337,453
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x0000000B,0
+
+[Window][Performance]
+Pos=1523,83
+Size=397,945
+Collapsed=0
+DockId=0x0000002F,0
 
 [Window][Output Plots]
-Pos=1523,48
-Size=397,505
+Pos=1523,77
+Size=397,490
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][navigator]
-Pos=0,48
-Size=267,505
+Pos=0,46
+Size=267,1011
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x0000001D,0
 
 [Window][window]
 Pos=65,130
@@ -440,64 +440,126 @@ Collapsed=0
 DockId=0x00000028,0
 
 [Window][Result]
-Pos=1261,83
-Size=659,897
+Pos=1327,83
+Size=593,945
 Collapsed=0
 DockId=0x00000029,0
 
 [Window][Destination Mesh]
-Pos=582,83
-Size=677,897
+Pos=572,83
+Size=753,945
 Collapsed=0
 DockId=0x00000028,0
 
 [Window][Source Mesh]
 Pos=0,83
-Size=580,897
+Size=570,945
 Collapsed=0
 DockId=0x00000026,0
 
+[Window][Controls]
+Pos=60,75
+Size=54,58
+Collapsed=0
+
+[Window][Perf]
+Pos=60,75
+Size=965,612
+Collapsed=0
+
+[Window][muscleplot0]
+Pos=1527,555
+Size=393,473
+Collapsed=0
+DockId=0x0000002B,0
+
+[Window][muscleplot1]
+Pos=1527,555
+Size=393,473
+Collapsed=0
+DockId=0x0000002B,1
+
+[Window][muscleplot2]
+Pos=1527,555
+Size=393,473
+Collapsed=0
+DockId=0x0000002B,2
+
+[Window][muscleplot3]
+Pos=1527,555
+Size=393,473
+Collapsed=0
+DockId=0x0000002B,3
+
+[Window][muscleplot4]
+Pos=1527,555
+Size=393,473
+Collapsed=0
+DockId=0x0000002B,4
+
+[Window][Edit Geometry Path]
+Pos=576,340
+Size=768,377
+Collapsed=0
+
+[Window][##visualizermodalpopup]
+Pos=269,67
+Size=1651,990
+Collapsed=0
+
+[Window][History]
+Pos=1232,83
+Size=289,945
+Collapsed=0
+DockId=0x00000030,0
+
 [Docking][Data]
-DockNode                          ID=0x00000025 Pos=29,454 Size=621,584 Selected=0xBDBFA952
-DockSpace                         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,83 Size=1920,897 Split=X Selected=0x945C996A
-  DockNode                        ID=0x00000026 Parent=0x8B93E3BD SizeRef=580,897 Selected=0x66BDF4F8
-  DockNode                        ID=0x00000027 Parent=0x8B93E3BD SizeRef=1338,897 Split=X
-    DockNode                      ID=0x0000001D Parent=0x00000027 SizeRef=267,1009 Split=Y Selected=0x69B4C9F1
-      DockNode                    ID=0x00000016 Parent=0x0000001D SizeRef=229,505 Selected=0x69B4C9F1
-      DockNode                    ID=0x00000018 Parent=0x0000001D SizeRef=229,502 Selected=0x27BA704B
-    DockNode                      ID=0x00000023 Parent=0x00000027 SizeRef=1651,1009 Split=X
-      DockNode                    ID=0x0000001E Parent=0x00000023 SizeRef=1521,1009 Split=X
-        DockNode                  ID=0x00000021 Parent=0x0000001E SizeRef=1525,979 Split=X
-          DockNode                ID=0x00000015 Parent=0x00000021 SizeRef=322,1118 Selected=0xFA7A28AE
-          DockNode                ID=0x00000017 Parent=0x00000021 SizeRef=1596,1118 Split=X
-            DockNode              ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
-            DockNode              ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
-              DockNode            ID=0x00000001 Parent=0x00000014 SizeRef=337,1117 Split=Y Selected=0x788BAA0D
-                DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
-                  DockNode        ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
-                    DockNode      ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
-                    DockNode      ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Selected=0x4EEF2531
-                  DockNode        ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
-                DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Split=Y Selected=0x1E8A59A1
-                  DockNode        ID=0x0000001F Parent=0x0000000B SizeRef=393,534 Selected=0x2EDB22E0
-                  DockNode        ID=0x00000020 Parent=0x0000000B SizeRef=393,443 Selected=0x199AB496
-              DockNode            ID=0x00000002 Parent=0x00000014 SizeRef=1581,1117 Split=Y
-                DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
-                  DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
-                    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=600,916 Split=X Selected=0x7644F5CE
-                      DockNode    ID=0x0000000E Parent=0x00000004 SizeRef=850,1011 Split=X Selected=0xE9146C8E
-                        DockNode  ID=0x00000028 Parent=0x0000000E SizeRef=677,897 CentralNode=1 Selected=0xE9146C8E
-                        DockNode  ID=0x00000029 Parent=0x0000000E SizeRef=659,897 Selected=0x0FF6C27D
-                      DockNode    ID=0x00000010 Parent=0x00000004 SizeRef=1068,1011 Selected=0x075BE350
-                    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=620,916 Split=Y Selected=0x98DE1660
-                      DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
-                      DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
-                        DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
-                        DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
-                  DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
-                DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0x64F50EE5
-        DockNode                  ID=0x00000022 Parent=0x0000001E SizeRef=393,979 Selected=0xE9337EF5
-      DockNode                    ID=0x00000024 Parent=0x00000023 SizeRef=397,1009 Split=Y Selected=0xCA5A0F8B
-        DockNode                  ID=0x00000011 Parent=0x00000024 SizeRef=397,505 Selected=0x044B1956
-        DockNode                  ID=0x00000012 Parent=0x00000024 SizeRef=397,502 Selected=0x1A64C361
+DockNode                                ID=0x00000025 Pos=29,454 Size=621,584 Selected=0xBDBFA952
+DockSpace                               ID=0x8B93E3BD Pos=0,83 Size=1920,945 Split=X Selected=0x945C996A
+  DockNode                              ID=0x0000001F Parent=0x8B93E3BD SizeRef=1521,945 Split=X
+    DockNode                            ID=0x0000002E Parent=0x0000001F SizeRef=1629,945 Split=Y
+      DockNode                          ID=0x00000009 Parent=0x0000002E SizeRef=1920,714 Split=X
+        DockNode                        ID=0x00000016 Parent=0x00000009 SizeRef=1651,1011 Split=X
+          DockNode                      ID=0x00000026 Parent=0x00000016 SizeRef=570,897 Selected=0x66BDF4F8
+          DockNode                      ID=0x00000027 Parent=0x00000016 SizeRef=1348,897 Split=X
+            DockNode                    ID=0x0000001D Parent=0x00000027 SizeRef=267,1009 Selected=0x9DA56915
+            DockNode                    ID=0x00000023 Parent=0x00000027 SizeRef=1651,1009 Split=X
+              DockNode                  ID=0x0000001E Parent=0x00000023 SizeRef=1521,1009 Split=X
+                DockNode                ID=0x00000021 Parent=0x0000001E SizeRef=1525,979 Split=X
+                  DockNode              ID=0x00000015 Parent=0x00000021 SizeRef=322,1118 Selected=0xFA7A28AE
+                  DockNode              ID=0x00000017 Parent=0x00000021 SizeRef=1596,1118 Split=X
+                    DockNode            ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
+                    DockNode            ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
+                      DockNode          ID=0x00000001 Parent=0x00000014 SizeRef=337,1117 Split=Y Selected=0x788BAA0D
+                        DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Split=Y Selected=0xAA7FB072
+                          DockNode      ID=0x00000019 Parent=0x00000003 SizeRef=353,537 Split=Y Selected=0x788BAA0D
+                            DockNode    ID=0x0000001B Parent=0x00000019 SizeRef=284,549 Selected=0x788BAA0D
+                            DockNode    ID=0x0000001C Parent=0x00000019 SizeRef=284,458 Split=Y Selected=0xB7559F23
+                              DockNode  ID=0x00000020 Parent=0x0000001C SizeRef=337,482 Selected=0x2EDB22E0
+                              DockNode  ID=0x0000002C Parent=0x0000001C SizeRef=337,496 Selected=0xB7559F23
+                          DockNode      ID=0x0000001A Parent=0x00000003 SizeRef=353,470 Selected=0x27CF05AC
+                        DockNode        ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Selected=0x199AB496
+                      DockNode          ID=0x00000002 Parent=0x00000014 SizeRef=1581,1117 Split=Y
+                        DockNode        ID=0x00000007 Parent=0x00000002 SizeRef=1157,916 Split=X Selected=0xEFD926F6
+                          DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=811,916 Split=X Selected=0x7644F5CE
+                            DockNode    ID=0x0000000E Parent=0x00000004 SizeRef=850,1011 Split=X Selected=0xE9146C8E
+                              DockNode  ID=0x00000028 Parent=0x0000000E SizeRef=753,897 CentralNode=1 Selected=0xE9146C8E
+                              DockNode  ID=0x00000029 Parent=0x0000000E SizeRef=593,897 Selected=0x0FF6C27D
+                            DockNode    ID=0x00000010 Parent=0x00000004 SizeRef=1068,1011 Selected=0x075BE350
+                          DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=768,916 Split=Y Selected=0x98DE1660
+                            DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 Selected=0x4B24DC7E
+                            DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
+                              DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x0C84A6AE
+                              DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
+                        DockNode        ID=0x00000008 Parent=0x00000002 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
+                DockNode                ID=0x00000022 Parent=0x0000001E SizeRef=393,979 Split=Y Selected=0xD0534012
+                  DockNode              ID=0x0000002A Parent=0x00000022 SizeRef=393,476 Selected=0xD0534012
+                  DockNode              ID=0x0000002B Parent=0x00000022 SizeRef=393,473 Selected=0x54544FA1
+              DockNode                  ID=0x00000024 Parent=0x00000023 SizeRef=397,1009 Split=Y Selected=0xCA5A0F8B
+                DockNode                ID=0x00000011 Parent=0x00000024 SizeRef=397,505 Selected=0x8327EF2F
+                DockNode                ID=0x00000012 Parent=0x00000024 SizeRef=397,502 Selected=0x6546E8FE
+        DockNode                        ID=0x00000018 Parent=0x00000009 SizeRef=267,1011 Selected=0x2A02436D
+      DockNode                          ID=0x0000000A Parent=0x0000002E SizeRef=1920,229 Selected=0x64F50EE5
+    DockNode                            ID=0x00000030 Parent=0x0000001F SizeRef=289,945 Selected=0xAC9ECCBA
+  DockNode                              ID=0x0000002F Parent=0x8B93E3BD SizeRef=397,945 Selected=0x60B79D0E
 
